--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@ var _hmt = _hmt || [];
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="Yating Huang, CS, SZU, Shenzhen University"> 
+<meta name="keywords" content="AI4Autism"> 
 <meta name="description" content="Yating Huang's home page">
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <meta name="google-site-verification" content="yy_3iiS_X6pJdegdwitJMrH0LRLHXwpjrV9RKLXxKjg" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
-<title>Yating Huang's homepage, Shenzhen University</title>
+<title>Welcome to AI4Autism</title>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -39,6 +39,10 @@ var _hmt = _hmt || [];
 	<tbody>
 		<tr>
 			<td width="670">
+				<img src="./pic/YatingHuang.jpg" border="0" width="200"><br>
+			</td>
+			<td>
+				
 				<div id="toptitle">					
 					<h1><font face="Arial"> Yating Huang </font></h1>  <h1><font face="Arial"> 黄雅婷 </font></h1>
 				</div>
@@ -52,14 +56,6 @@ var _hmt = _hmt || [];
 					<em>Email: <a href="huangyating2019@email.szu.edu.cn">huangyating2019@email.szu.edu.cn</a></em> <br>
 					<a href="./YatingHuang.pdf"><em>[Curriculum Vitae]</em></a>
 				</font></p>
-				<p> 
-				    <a href="https://www.researchgate.net/profile/Yating-Huang-8"><img src="./pic/rg.png" height="30px" style="margin-bottom:-3px"></a>
-				    <a href="https://github.com/Yating-Huang"><img src="./pic/github.jpg" height="30px" style="margin-bottom:-3px"></a>
-				    <a href="https://www.linkedin.com/in/yating-huang-273a53224/"><img src="./pic/linkedin.png" height="30px" style="margin-bottom:-3px"></a>
-				</p>
-			</td>
-			<td>
-				<img src="./pic/YatingHuang.jpg" border="0" width="200"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
