--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ var _hmt = _hmt || [];
 	<tbody>
 		<tr>
 			<td width="670">
-				<img src="./pic/YatingHuang.jpg" border="0" width="200"><br>
+				<img src="./pic/ai4autism.jpg" border="0" width="200"><br>
 			</td>
 			<td>
 				
