--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ var _hmt = _hmt || [];
 <table>
 	<tbody>
 		<tr>
-			<td width="670">
+			<td width="200">
 				<img src="./pic/ai4autism.jpg" border="0" width="200"><br>
 			</td>
 			<td>
 				
 				<div id="toptitle">					
-					<h1><font face="Arial"> Yating Huang </font></h1>  <h1><font face="Arial"> 黄雅婷 </font></h1>
+					<h1><font face="Arial"> Welcome to </font></h1>  <h1><font face="Arial"> AI4Autism </font></h1>
 				</div>
 
 				<h3><font face="Arial"> M. Sc </font></h3>
