--- a/index.html
+++ b/index.html
@@ -58,22 +58,10 @@ var _hmt = _hmt || [];
 	</tr></tbody>
 </table>
 
-<p style="text-align:justify";><font face="Arial">
-	I am currently a third-year (2021-2022) Master student in the <a href="http://csse.szu.edu.cn/cn/index">College of Computer Science and Software Engineering</a>, 
-	<a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>, supervised by Prof. <a href="https://www.researchgate.net/profile/Linlin-Shen" target="_blank">
-	Linlin Shen</a>. Before that, I received Bachelor degree in Information Management and Information System (Medical Information) from the <a href="https://www.fjtcm.edu.cn/">Fujian University of Traditional Chinese Medicine (FJTCM)</a> in 2019.  
-</font></p>
-<p><font face="Arial">
-	My research interests include medical image analysis and deep learning.
-</font></p>
-
-
-
-
 
 
 <h2><font face="Arial"> Publications </font></h2>
-<h3><font face="Arial"> Journal Papers </font> </h3>
+<h3><font face="Arial"> Classification </font> </h3>
 <table id="tbPublications" width="100%">
 	<tbody>
 		
