--- a/index.html
+++ b/index.html
@@ -48,13 +48,23 @@ var _hmt = _hmt || [];
 				
 				<div id="toptitle">					
 					<h1><font face="Arial"> Welcome to AI4Autism </font></h1> 
+					<h3><font face="Arial"> This website collects all the information related to AI applied in autism that I have come across during my doctoral studies. </font></h3>
 				</div>
 			</td>
 		</tr><tr>
 	</tr></tbody>
 </table>
 
-
+<h2><font face="Arial"> Aims </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
+		 Collect all information about AI for autism I see during my PhD studies  <br>
+		 Outstanding Graduate, Fujian University of Traditional Chinese Medicine, 2019  <br>
+		 Outstanding Undergraduate Thesis, Fujian University of Traditional Chinese Medicine, 2019  <br>  
+		 First-Class Scholarship, Fujian University of Traditional Chinese Medicine, 2018- 2019   
+	      </font> </p> 
+         
+</ul>
 
 <h2><font face="Arial"> Publications </font></h2>
 <h3><font face="Arial"> Classification </font> </h3>
