--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ var _hmt = _hmt || [];
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
 		 Artificial intelligence (AI) and autism are my master's and doctoral research directions respectively. When I was a second-year master, I found that the probability of mental illness among my classmates was much higher than other diseases. Since then, I have developed a strong curiosity about neuroscience. Can AI help humans diagnose mental illness faster? 
 		 Or can AI speed up the process of mental illness from diagnosis to recovery? Therefore, I created this website to collect all the information about AI and autism that I know during my PhD.
-		 By this website, I wish to raise awareness of autism and stimulate ideas for using AI to enhance the lives of those who are autistic.
+		 By this website, I wish to raise public awareness of autism and stimulate ideas for using AI to enhance the lives of people with autism.
 		   
 	      </font> </p> 
          
