--- a/index.html
+++ b/index.html
@@ -112,13 +112,12 @@ var _hmt = _hmt || [];
 
 </tbody></table>
 			
-<h2><font face="Arial"> Honors & Awards </font></h2>
+<h2><font face="Arial"> Limitations </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-		 Special Scholarship, Shenzhen University, 2019 - 2020  <br>
-		 Outstanding Graduate, Fujian University of Traditional Chinese Medicine, 2019  <br>
-		 Outstanding Undergraduate Thesis, Fujian University of Traditional Chinese Medicine, 2019  <br>  
-		 First-Class Scholarship, Fujian University of Traditional Chinese Medicine, 2018- 2019   
+		 This is a site I built in my spare time, which means it's not perfect. It can only show what I know about AI and autism. 
+		 I will update this site over the weekend. But this information is not exhaustive. 
+		   
 	      </font> </p> 
          
 </ul>
