--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ var _hmt = _hmt || [];
 <h2><font face="Arial"> Limitations </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-		 This is a site I built in my spare time, which means it's not perfect. It can only show what I know about AI and autism. 
+		 This is a website I create in my spare time, which means it's not perfect. It can only show what I know about AI and autism. 
 		 I will update this site over the weekend. But this information is not exhaustive. 
 		   
 	      </font> </p> 
