--- a/index.html
+++ b/index.html
@@ -72,14 +72,10 @@ var _hmt = _hmt || [];
 	<tbody>
 		
     <tr>	
-		<td width="206">
-		<img src="./pic/TSC-WNet.png" width="185px" height = "105" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><b>Tongue Size and Shape Classification Fusing Segmentation Features for Traditional Chinese Medicine Diagnosis</b> <br>
-		<b>Yating Huang</b>*, Xuechen Li*, Siting Zheng, Zhonglian Li, Sihan Li, Linlin Shen, Changen Zhou, Zhihui Lai.(* indicates equal contribution)<br>
-		<p><em>Frontiers in Neuroinformatics</em> (<i><b>Under review</b></i>), 2021 <br>
-	        [<a href="https://www.researchgate.net/publication/354694326_Tongue_Size_and_Shape_Classification_Fusing_Segmentation_Features_for_Traditional_Chinese_Medicine_Diagnosis">paper</a>]
-		[<a href="https://github.com/Yating-Huang/TSC-WNet">code</a>]
+		<td>Alsaade F W, Alzahrani M S. Classification and detection of autism spectrum disorder based on 
+		deep learning algorithms[J]. Computational Intelligence and Neuroscience, 2022, 2022. <br>
+	        [<a href="https://www.hindawi.com/journals/cin/2022/8709145/">paper</a>]
+		[<a href="https://www.kaggle.com/cihan063/autism-image-data">data</a>]
 	    	</td>
 	</tr>
 	<tr></tr>
