--- a/index.html
+++ b/index.html
@@ -86,19 +86,17 @@ var _hmt = _hmt || [];
     
 	
 </tbody></table>
-<h3><font face="Arial"> Conference Papers </font> </h3>
+<h3><font face="Arial"> Segmentation </font> </h3>
 <table id="tbPublications" width="100%">
 	<tbody>
 		
     <tr>	
-		<td width="206">
-		<img src="./pic/TU-Net.png" width="185px" height = "105" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><b>TU-Net: A Precise Network for Tongue Segmentation</b> <br>
-		<b>Yating Huang</b>, Zhihui Lai, Wenjing Wang. <br>
-		<p><em>9th International Conference on Computing and Pattern</em> (<i><b>ICCPR 2020</b></i>), 2020 <br>
+				
+		<td>Klapwijk E T, Van De Kamp F, Van Der Meulen M, et al. 
+		Qoala-T: A supervised-learning tool for quality control of FreeSurfer segmented MRI data[J]. Neuroimage, 2019, 189: 116-129. <br>
 	        [<a href="https://www.researchgate.net/publication/348414683_TU-Net_A_Precise_Network_for_Tongue_Segmentation">paper</a>]
-		[<a href="https://github.com/Yating-Huang/TU-Net">code</a>]
+		[<a href="https://github.com/Qoala-T/QC">code</a>]
+		[<a href="http://fcon_1000.projects.nitrc.org/indi/abide/">data</a>]
 		</td>
 	</tr>
 	<tr></tr>
