--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@ var _hmt = _hmt || [];
 	        [<a href="https://www.hindawi.com/journals/cin/2022/8709145/">paper</a>]
 		[<a href="https://www.kaggle.com/cihan063/autism-image-data">data</a>]
 	    	</td>
+	        <td>Alsaade F W, Alzahrani M S. Classification and detection of autism spectrum disorder based on 
+		deep learning algorithms[J]. Computational Intelligence and Neuroscience, 2022, 2022. <br>
+	        [<a href="https://www.hindawi.com/journals/cin/2022/8709145/">paper</a>]
+		[<a href="https://www.kaggle.com/cihan063/autism-image-data">data</a>]
+	    	</td>
 	</tr>
 	<tr></tr>
     <tr></tr>
