--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ var _hmt = _hmt || [];
 	    	</td>
 	        
 	</tr>
-	<tr><td>Alsaade F W, Alzahrani M S. Classification and detection of autism spectrum disorder based on 
-		deep learning algorithms[J]. Computational Intelligence and Neuroscience, 2022, 2022. <br>
-	        [<a href="https://www.hindawi.com/journals/cin/2022/8709145/">paper</a>]
-		[<a href="https://www.kaggle.com/cihan063/autism-image-data">data</a>]
+	<tr><td>Deng X, Zhang J, Liu R, et al. Classifying ASD based on time-series fMRI using spatial–temporal 
+		transformer[J]. Computers in Biology and Medicine, 2022, 151: 106320. <br>
+	        [<a href="https://www.sciencedirect.com/science/article/pii/S0010482522010289?casa_token=mP8w2But3yUAAAAA:BSgpNFFQly3LEgiSCPeSIwcycsJzHJW72AWdDO0PiimIubcVxnLxGJnSu46rGI-B5XVudxVpVkI">paper</a>]
+		[<a href="https://www.frontiersin.org/10.3389/conf.fninf.2013.09.00041/event_abstract">data</a>]
 	    	</td></tr>
     <tr></tr>
     <tr></tr>	
