--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ var _hmt = _hmt || [];
 <h2><font face="Arial"> Contact </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font face="Arial" size="3"><meta charset="utf-8">
-		 Please contact me if you have any question or advice.<em>Email: <a href="yating.huang@ki.se">yating.huang@ki.se</a></em>
+		 Please contact me if you have any question or advice.<em> My email: <a href="yating.huang@ki.se">yating.huang@ki.se</a></em>
 		   
 	      </font> </p> 
          
