--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ var _hmt = _hmt || [];
 				
 		<td>Klapwijk E T, Van De Kamp F, Van Der Meulen M, et al. 
 		Qoala-T: A supervised-learning tool for quality control of FreeSurfer segmented MRI data[J]. Neuroimage, 2019, 189: 116-129. <br>
-	        [<a href="https://www.researchgate.net/publication/348414683_TU-Net_A_Precise_Network_for_Tongue_Segmentation">paper</a>]
+	        [<a href="https://www.sciencedirect.com/science/article/pii/S1053811919300138">paper</a>]
 		[<a href="https://github.com/Qoala-T/QC">code</a>]
 		[<a href="http://fcon_1000.projects.nitrc.org/indi/abide/">data</a>]
 		</td>
